fixed margin spacing

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ nav ul li {
 .actions{
     display: flex;
     margin-left: auto;
+    margin-right: 2rem;
 }
 
 .signIn {
